--- a/demos/index.html
+++ b/demos/index.html
@@ -162,7 +162,10 @@
 					<div id="contact-container">
 						<p>PC demos</p>
 						<ul>
+							<li><a href="./demo2">Enterprise/Shop website</a></li>
 							<li><a href="./demo1">Enterprise/Shop website</a></li>
+							<li><a href="./demo1">Local candy shop website</a></li>
+							<li><a href="./demo1">High-tech shop demo website</a></li>
 						</ul>
 					</div>
 				</div>
