--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				height: 50px;
 				background-color: #f2c51f;
 				color: black;
-				z-index: 1;
+				z-index: 10;
 			}
 			
 			#navbar-dapsvi {
@@ -217,7 +217,39 @@
 				font-size: 15px;
 			}
 			
+			.fullsize {
+				width: 100%;
+				height: 200%;
+				position: absolute;
+				top: 0;
+				left: 0;
+			}
 			
+			#indbar {
+				width: 3px;
+				height: 55%;
+				position: absolute;
+				top: 45%;
+				background-color: white;
+				z-index: 1;
+				border-radius: 3px 3px 0 0;
+			}
+			
+			.center {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			
+			.circle {
+				width: 50px;
+				height: 50px;
+				border-radius: 100px;
+			}
+			
+			.transparent-white-border {
+				border: 3px solid white;
+			}
 			
 			
 			@keyframes leftscroll {
@@ -302,6 +334,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="center fullsize">
+			<div id="indbar"></div>
 		</div>
 		<script>
 			function on150Scroll() {
