--- a/demos/demo4/index.html
+++ b/demos/demo4/index.html
@@ -156,6 +156,38 @@
             margin: 0;
             color: #ecf0f1;
         }
+
+        /* Mobile Styles */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            nav {
+                margin: 10px 0;
+				padding: 0;
+            }
+
+            nav a {
+                display: block;
+                margin: 10px 0;
+                font-size: 1.2rem;
+            }
+
+            #services, #gallery, #contact {
+                padding: 20px 0;
+            }
+
+            .service, .gallery-item {
+                width: 100%;
+                margin: 10px 0;
+				padding: 0;
+            }
+
+            form {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
