--- a/demos/demo3/index.html
+++ b/demos/demo3/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Co. - Artisanal Candies</title>
     <style>
-		html {
-			scroll-behavior: smooth;
-		}
-	
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -23,9 +23,11 @@
             0% {
                 background-position: 0% 50%;
             }
+
             50% {
                 background-position: 100% 50%;
             }
+
             100% {
                 background-position: 0% 50%;
             }
@@ -107,6 +109,41 @@
             color: #fff;
             padding: 20px;
             text-align: center;
+        }
+
+        @media (max-width: 767px) {
+			
+            .hero {
+				padding-left: 0;
+				padding-right: 0;
+				margin-left: 0;
+				margin-right: 0;
+            }
+
+            .hero h1 {
+                font-size: 1.8rem;
+            }
+
+            .hero p {
+                font-size: 1rem;
+            }
+
+            .carousel img {
+                max-width: 100%;
+            }
+
+            .description h2 {
+                font-size: 1.2rem;
+            }
+
+            .description p {
+                font-size: 0.9rem;
+            }
+
+            footer {
+                padding: 15px;
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
