--- a/demos/demo4/index.html
+++ b/demos/demo4/index.html
@@ -195,32 +195,32 @@
         <h1>High-Tech Shop Demo</h1>
         <nav>
             <a href="#services">Services</a>
-            <a href="#gallery">Gallery</a>
+            <a href="#gallery">Gallerie</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <section id="services">
-        <h2>Our Services</h2>
+        <h2>Nos services</h2>
         <div class="service">
             <img src="https://img.freepik.com/premium-vector/empty-blue-studio-table-with-beautiful-lights-shadows-blank-stand-display-showing-product_144352-375.jpg?semt=ais_hybrid" alt="Service 1">
-            <h3>Product Display</h3>
-            <p>Showcase your latest products with stunning visuals.</p>
+            <h3>Produits affichés</h3>
+            <p>Affichez vos produits avec des effets visuels éblouissants !</p>
         </div>
         <div class="service">
             <img src="https://www.hubspot.com/hs-fs/hubfs/customer-needs-4-1.jpg?width=595&height=400&name=customer-needs-4-1.jpg" alt="Service 2">
-            <h3>Custom Orders</h3>
-            <p>Let customers place custom orders directly from your site.</p>
+            <h3>Commandes personnalisées</h3>
+            <p>Permettez aux clients de passer des commandes personnalisées directement depuis votre site.</p>
         </div>
         <div class="service">
             <img src="https://www.skunexus.com/hs-fs/hubfs/BOPIS-FT-EUSTIS-15.jpg?width=700&name=BOPIS-FT-EUSTIS-15.jpg" alt="Service 3">
-            <h3>In-Store Pickup</h3>
-            <p>Offer an option to pick up products in your local store.</p>
+            <h3>Retrait en magasin</h3>
+            <p>Offrez la possibilité de récupérer les produits dans votre magasin local.</p>
         </div>
     </section>
 
     <section id="gallery">
-        <h2>Gallery</h2>
+        <h2>Gallerie</h2>
         <div class="gallery-item">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQHUJFTYG4Oa14rMjn8G3nDgRjhGIIvoEfq_A&s" alt="Gallery Item 1">
         </div>
@@ -233,12 +233,12 @@
     </section>
 
     <section id="contact">
-        <h2>Contact Us</h2>
+        <h2>Contactez nous !</h2>
         <form id="contact-form">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Your Email" required>
-            <textarea id="message" rows="4" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
+            <input type="text" id="name" placeholder="Votre Nom" required>
+            <input type="email" id="email" placeholder="Votre Email" required>
+            <textarea id="message" rows="4" placeholder="Votre Message (ce formulaire est factice à titre de démonstration)" required></textarea>
+            <button type="submit">Envoyer le message</button>
         </form>
     </section>
 
