--- a/demos/index.html
+++ b/demos/index.html
@@ -148,9 +148,9 @@
 				<div id="hsplit">
 					<p id="navbar-dapsvi" id="fixedwidth100px">dapsvi</p>
 					<div id="navbuttons">
-						<a href="../">Home</a>
-						<a href="./">Contact me</a>
-						<a href="../demos">Demos</a>
+						<a href="../">Accueil</a>
+						<a href="./">Contact</a>
+						<a href="../demos">Démos</a>
 					</div>
 				</div>
 			</div>
@@ -160,12 +160,13 @@
 			<div class="vcenter">
 				<div class="hcenter">
 					<div id="contact-container">
-						<p>PC demos</p>
+						<p>Sites de démonstration</p>
 						<ul>
-							<li><a href="./demo2">Enterprise/Shop website</a></li>
-							<li><a href="./demo1">Enterprise/Shop website</a></li>
-							<li><a href="./demo3">Local candy shop website</a></li>
-							<li><a href="./demo4">High-tech shop demo website</a></li>
+							<li><a href="./demo2">Site d'entreprise ou de magasin</a></li>
+							<!-- <li><a href="./demo1">[to remove]</a></li> -->
+							<!-- <li><a href="./demo3">[to remove]</a></li> -->
+							<li><a href="./demo4">Site d'entreprise</a></li>
+							<li><a href="./demo6">Site de vente de piscine</a></li>
 						</ul>
 					</div>
 				</div>
