--- a/contact/index.html
+++ b/contact/index.html
@@ -81,6 +81,7 @@
 			#hsplit {
 				display: flex;
 				flex-direction: row;
+				justify-content: space-between;
 			}
 			
 			#fixedwidth100px {
@@ -91,8 +92,8 @@
 				display: flex;
 				flex-direction: row;
 				flex-wrap: nowrap;
-				justify-content: right;
-				width: 100%;
+				justify-content: center;
+				width: 50%;
 				gap: 20px;
 				margin: 0 20px;
 			}
@@ -144,9 +145,9 @@
 				<div id="hsplit">
 					<p id="navbar-dapsvi" id="fixedwidth100px">dapsvi</p>
 					<div id="navbuttons">
-						<a href="../">Home</a>
-						<a href="./">Contact me</a>
-						<a href="../demos">Demos</a>
+						<a href="../">Accueil</a>
+						<a href="./">Contact</a>
+						<a href="../demos">Démos</a>
 					</div>
 				</div>
 			</div>
@@ -157,7 +158,7 @@
 				<div class="hcenter">
 					<div id="contact-container">
 						<div id="contact-title hcenter">
-							<h1 class="text-center">Contact me</h1>
+							<h1 class="text-center">Contact</h1>
 						</div>
 						<div id="contact">
 							Mail : <a class="contactinfo" href="mailto:dapsvi.universe@gmail.com">dapsvi.universe@gmail.com</a>
