--- a/contact/index.html
+++ b/contact/index.html
@@ -72,10 +72,12 @@
 			
 			#navbar-dapsvi {
 				margin: 0;
+				width: 50%;
 				color: black;
 				font-size: 20px;
 				margin-left: 10px;
 				font-weight: bold;
+				text-align: center;
 			}
 			
 			#hsplit {
