--- a/demos/index.html
+++ b/demos/index.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
 		<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
+		<link rel="icon" href="../logo.png" type="image/x-icon">
 		<style>
 			* {
 				font-family: "Ubuntu Mono", monospace;
@@ -72,15 +73,18 @@
 			
 			#navbar-dapsvi {
 				margin: 0;
+				width: 50%;
 				color: black;
 				font-size: 20px;
 				margin-left: 10px;
 				font-weight: bold;
+				text-align: center;
 			}
 			
 			#hsplit {
 				display: flex;
 				flex-direction: row;
+				justify-content: space-between;
 			}
 			
 			#fixedwidth100px {
@@ -91,8 +95,8 @@
 				display: flex;
 				flex-direction: row;
 				flex-wrap: nowrap;
-				justify-content: right;
-				width: 100%;
+				justify-content: center;
+				width: 50%;
 				gap: 20px;
 				margin: 0 20px;
 			}
