--- a/demos/index.html
+++ b/demos/index.html
@@ -153,8 +153,8 @@
 					<p id="navbar-dapsvi" id="fixedwidth100px">dapsvi</p>
 					<div id="navbuttons">
 						<a href="../">Accueil</a>
-						<a href="./">Contact</a>
-						<a href="../demos">Démos</a>
+						<a href="../contact">Contact</a>
+						<a href="./">Démos</a>
 					</div>
 				</div>
 			</div>
