--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
 		<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
+		<link rel="icon" href="../logo.png" type="image/x-icon">
 		<style>
 			* {
 				font-family: "Ubuntu Mono", monospace;
