--- a/m5tacks/index.html
+++ b/m5tacks/index.html
@@ -1,1 +1,60 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cardputer &amp; M5Stick Overview</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="firmwares.html">Firmwares</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="cardputer">
+      <h1>What is a Cardputer?</h1>
+      <p>
+        The Cardputer is a compact, wallet‐sized computer designed for
+        portability and efficiency. It comes in several versions, each
+        improving on performance, battery life, and functionality. Ideal for
+        on‐the-go tasks, the Cardputer brings modern computing into a small
+        form factor.
+      </p>
+      <h2>Versions</h2>
+      <ul>
+        <li><strong>Cardputer V1:</strong> Basic functionality with essential
+          features.</li>
+        <li><strong>Cardputer V2:</strong> Enhanced performance and additional
+          connectivity options.</li>
+        <li><strong>Cardputer V3:</strong> Latest design with improved battery
+          life and expanded features.</li>
+      </ul>
+    </section>
+    <section class="m5stick">
+      <h1>What is an M5Stick?</h1>
+      <p>
+        The M5Stick is a series of compact, versatile microcontroller
+        development kits. Featuring an integrated display, buttons, and
+        sensors, it is perfect for rapid prototyping, IoT projects, and
+        educational purposes. Its modern design—with rounded edges and an
+        ergonomic layout—ensures both functionality and style.
+      </p>
+      <h2>Popular Versions</h2>
+      <ul>
+        <li><strong>M5StickC:</strong> A compact model with a 1.14-inch display
+          and essential features.</li>
+        <li><strong>M5StickC Plus:</strong> An enhanced version offering extra
+          features and improved performance.</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 Cardputer &amp; M5Stick Info</p>
+  </footer>
+</body>
+</html>
