--- a/m5stacks/index.html
+++ b/m5stacks/index.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="firmwares.html">Firmwares</a></li>
+        <li><a href="files/index.html">Files</a></li>
       </ul>
     </nav>
   </header>
@@ -19,37 +20,18 @@
     <section class="cardputer">
       <h1>What is a Cardputer?</h1>
       <p>
-        The Cardputer is a compact, wallet‐sized computer designed for
-        portability and efficiency. It comes in several versions, each
-        improving on performance, battery life, and functionality. Ideal for
-        on‐the-go tasks, the Cardputer brings modern computing into a small
-        form factor.
+        The Cardputer is a compact, wallet‐sized computer designed for portability. Ideal for on‐the-go tasks, the Cardputer brings modern computing into a small form factor. It is based on the ESP-32 board which includes Wi-Fi and Bluetooth connection components natively. It can be used as a portable hacking device, essentially replacing most of the flipper zero features for only $USD 30. However, to access its full power, you will need to purchase additional equipment to replicate the flipper zero.
       </p>
-      <h2>Versions</h2>
-      <ul>
-        <li><strong>Cardputer V1:</strong> Basic functionality with essential
-          features.</li>
-        <li><strong>Cardputer V2:</strong> Enhanced performance and additional
-          connectivity options.</li>
-        <li><strong>Cardputer V3:</strong> Latest design with improved battery
-          life and expanded features.</li>
-      </ul>
     </section>
     <section class="m5stick">
       <h1>What is an M5Stick?</h1>
       <p>
-        The M5Stick is a series of compact, versatile microcontroller
-        development kits. Featuring an integrated display, buttons, and
-        sensors, it is perfect for rapid prototyping, IoT projects, and
-        educational purposes. Its modern design—with rounded edges and an
-        ergonomic layout—ensures both functionality and style.
+        The M5Stick is a series of compact, microcontroller development kits. Featuring an integrated 1.14 inch display, buttons, and sensors, it is perfect for rapid prototyping, IoT projects, and educational purposes. Like the CardPuter, it can be used as a portable hacking device, and is also based on the ESP-32.
       </p>
       <h2>Popular Versions</h2>
       <ul>
-        <li><strong>M5StickC:</strong> A compact model with a 1.14-inch display
-          and essential features.</li>
-        <li><strong>M5StickC Plus:</strong> An enhanced version offering extra
-          features and improved performance.</li>
+        <li><strong>M5stickC Plus:</strong> A compact model, first model of the M5StickC Plus series.</li>
+        <li><strong>M5StickC Plus2:</strong> An enhanced version of the M5stickC Plus offering better components such as a more powerful IR transmitter and a more stable USB.</li>
       </ul>
     </section>
   </main>
