--- a/m5stacks/firmwares.html
+++ b/m5stacks/firmwares.html
@@ -12,42 +12,62 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="firmwares.html">Firmwares</a></li>
+        <li><a href="files/index.html">Files</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section class="firmwares">
       <h1>Available Firmwares</h1>
-      <p>Select a firmware for your device:</p>
       <h2>Cardputer Firmwares</h2>
       <ul>
         <li>
-          <a href="https://github.com/example/cardputer-firmware-v1" target="_blank">
-            Cardputer Firmware V1
-          </a> – Basic firmware for initial models.
+          <a href="https://github.com/pr3y/Bruce" target="_blank">
+            Bruce
+          </a> – Currently best firmware for red team operations.
         </li>
         <li>
-          <a href="https://github.com/example/cardputer-firmware-v2" target="_blank">
-            Cardputer Firmware V2
-          </a> – Enhanced firmware with additional features.
+          <a href="https://github.com/n0xa/m5stick-nemo" target="_blank">
+            Nemo [ARCHIVED]
+          </a> – Older firmware, used to be the reference before Bruce arrived in offensive attacking.
+        </li>
+        <li>
+          <a href="https://github.com/7h30th3r0n3/Evil-M5Project" target="_blank">
+            Evil-M5Project
+          </a> – Less features than Bruce, but still a good choice for offensive hacking.
+        </li>
+        <li>
+          <a href="https://github.com/echo-lalia/MicroHydra" target="_blank">
+            Microhydra
+          </a> – Proposes a very practical way of switching between micropython applications. You can code and create your own apps using this firmware.
         </li>
       </ul>
       <h2>M5Stick Firmwares</h2>
       <ul>
         <li>
-          <a href="https://docs.m5stack.com/#/en/quick_start/ui_flow" target="_blank">
-            M5Stack UIFlow
-          </a> – A visual programming environment firmware.
+          <a href="https://github.com/pr3y/Bruce" target="_blank">
+            Bruce
+          </a> – Currently best firmware for red team operations.
         </li>
         <li>
-          <a href="https://docs.m5stack.com/#/en/arduino/" target="_blank">
-            Arduino for M5Stick
-          </a> – Firmware for programming your M5Stick with the Arduino IDE.
+          <a href="https://github.com/n0xa/m5stick-nemo" target="_blank">
+            Nemo [ARCHIVED]
+          </a> – Older firmware, used to be the reference before Bruce arrived in offensive attacking.
         </li>
         <li>
-          <a href="https://docs.m5stack.com/#/en/quick_start/micropython" target="_blank">
-            MicroPython for M5Stick
-          </a> – Ideal for rapid prototyping with Python.
+          <a href="https://github.com/Stachugit/CatHack" target="_blank">
+            CatHack
+          </a> – Maintained firmware for red team operations.
+        </li>
+        <li>
+          <a href="https://github.com/7h30th3r0n3/Evil-M5Project" target="_blank">
+            Evil-M5Project
+          </a> – Less features than Bruce, but still a good choice for offensive hacking.
+        </li>
+        <li>
+          <a href="https://github.com/echo-lalia/MicroHydra" target="_blank">
+            Microhydra
+          </a> – Proposes a very practical way of switching between micropython applications. You can code and create your own apps using this firmware.
         </li>
       </ul>
     </section>
