--- a/m5stacks/files/IRDB.html
+++ b/m5stacks/files/IRDB.html
@@ -17,11 +17,8 @@
     </nav>
   </header>
   <main>
-    <ul>
-      <li><a href="IRDB.html">IRDB - infrared files for emulation</a></li>
-      <li><a href="amiibo.html">Amiibo NFC files</a></li>
-      <li><a href="portals.html">Fake login pages for wifies using Evil Portal with Bruce firmware</a></li>
-    </ul>
+    <h2>Download IR files :</h2>
+    <a href="https://github.com/Lucaslhm/Flipper-IRDB">IR files for flipper zero but readable by M5Stacks products</a>
   </main>
 </body>
 </html>
