--- a/m5stacks/files/portals.html
+++ b/m5stacks/files/portals.html
@@ -17,11 +17,9 @@
     </nav>
   </header>
   <main>
-    <ul>
-      <li><a href="IRDB.html">IRDB - infrared files for emulation</a></li>
-      <li><a href="amiibo.html">Amiibo NFC files</a></li>
-      <li><a href="portals.html">Fake login pages for wifies using Evil Portal with Bruce firmware</a></li>
-    </ul>
+    <h2>Download example files :</h2>
+    <a href="https://github.com/pr3y/Bruce/tree/main/sd_files/portals/en">Facebook, Google, Microsoft, Instagram, router update</a>
+    <p>To create your own phishing page, design your page to have a &lt;form action="/post"&gt; form where people put their credentials. The form must have two inputs with these arguments : name="email" for the email field and name="password" for the password field</p>
   </main>
 </body>
 </html>
