--- a/m5stacks/index.html
+++ b/m5stacks/index.html
@@ -10,30 +10,42 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="firmwares.html">Firmwares</a></li>
-        <li><a href="files/index.html">Files</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./firmwares">Firmwares</a></li>
+        <li><a href="./files">Files</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <section class="cardputer">
-      <h1>What is a Cardputer?</h1>
-      <p>
-        The Cardputer is a compact, wallet‐sized computer designed for portability. Ideal for on‐the-go tasks, the Cardputer brings modern computing into a small form factor. It is based on the ESP-32 board which includes Wi-Fi and Bluetooth connection components natively. It can be used as a portable hacking device, essentially replacing most of the flipper zero features for only $USD 30. However, to access its full power, you will need to purchase additional equipment to replicate the flipper zero.
-      </p>
-    </section>
-    <section class="m5stick">
-      <h1>What is an M5Stick?</h1>
-      <p>
-        The M5Stick is a series of compact, microcontroller development kits. Featuring an integrated 1.14 inch display, buttons, and sensors, it is perfect for rapid prototyping, IoT projects, and educational purposes. Like the CardPuter, it can be used as a portable hacking device, and is also based on the ESP-32.
-      </p>
-      <h2>Popular Versions</h2>
-      <ul>
-        <li><strong>M5stickC Plus:</strong> A compact model, first model of the M5StickC Plus series.</li>
-        <li><strong>M5StickC Plus2:</strong> An enhanced version of the M5stickC Plus offering better components such as a more powerful IR transmitter and a more stable USB.</li>
-      </ul>
-    </section>
-  </main>
+  <div class="container">
+    <main>
+      <section class="cardputer">
+        <h1>What is a Cardputer?</h1>
+        <p>
+          The Cardputer is a compact, wallet‐sized computer designed for portability.
+          Ideal for on‐the-go tasks, the Cardputer brings modern computing into a small form factor.
+          It is based on the ESP-32 board which includes Wi-Fi and Bluetooth connection components natively.
+          It can be used as a portable hacking device, essentially replacing most of the flipper zero features for only $USD 30.
+          However, to access its full power, you will need to purchase additional equipment to replicate the flipper zero.
+        </p>
+      </section>
+      <section class="m5stick">
+        <h1>What is an M5Stick?</h1>
+        <p>
+          The M5Stick is a series of compact, microcontroller development kits.
+          Featuring an integrated 1.14 inch display, buttons, and sensors, it is perfect for rapid prototyping,
+          IoT projects, and educational purposes.
+          Like the Cardputer, it can be used as a portable hacking device, and is also based on the ESP-32.
+        </p>
+        <h2>Popular Versions</h2>
+        <ul>
+          <li><strong>M5stickC Plus:</strong> A compact model, first model of the M5StickC Plus series.</li>
+          <li><strong>M5StickC Plus2:</strong> An enhanced version of the M5stickC Plus offering better components such as a more powerful IR transmitter and a more stable USB.</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 Cardputer &amp; M5Stick. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
