--- a/m5stacks/files/IRDB.html
+++ b/m5stacks/files/IRDB.html
@@ -10,9 +10,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../firmwares.html">Firmwares</a></li>
-        <li><a href="../files/index.html">Files</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../firmwares">Firmwares</a></li>
+        <li><a href="../files">Files</a></li>
       </ul>
     </nav>
   </header>
