--- a/m5stacks/files/index.html
+++ b/m5stacks/files/index.html
@@ -3,25 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Useful files for Cardputer &amp; M5Stick</title>
+  <title>Files for Cardputer &amp; M5Stick</title>
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../firmwares.html">Firmwares</a></li>
-        <li><a href="../files/index.html">Files</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../firmwares">Firmwares</a></li>
+        <li><a href="../files">Files</a></li>
       </ul>
     </nav>
   </header>
-  <main>
-    <ul>
-      <li><a href="IRDB.html">IRDB - infrared files for emulation</a></li>
-      <li><a href="amiibo.html">Amiibo NFC files</a></li>
-      <li><a href="portals.html">Fake login pages for wifies using Evil Portal with Bruce firmware</a></li>
-    </ul>
-  </main>
+  <div class="container">
+    <main>
+      <section class="firmwares">
+        <h1>Bruce</h1>
+        <h2>List of categories :</h2>
+          <ul>
+            <li><a href="IRDB.html">IRDB - infrared files for emulation</a></li>
+            <li><a href="amiibo.html">Amiibo NFC files</a></li>
+            <li><a href="portals.html">Fake login pages for wifies using Evil Portal with Bruce firmware</a></li>
+          </ul>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
