--- a/m5stacks/firmwares/index.html
+++ b/m5stacks/firmwares/index.html
@@ -1,1 +1,71 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Firmwares for Cardputer &amp; M5Stick</title>
+  <link rel="stylesheet" href="../style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="../">Home</a></li>
+        <li><a href="../firmwares">Firmwares</a></li>
+        <li><a href="../files">Files</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container">
+    <main>
+      <section class="firmwares">
+        <h1>Available Firmwares</h1>
+        <h2>Cardputer Firmwares</h2>
+        <ul>
+          <li>
+            <a href="bruce.html">Bruce</a> – Currently best firmware for red team operations.
+          </li>
+          <li>
+            <a href="nemo.html">Nemo [ARCHIVED]</a> – Older firmware, used to be the reference before Bruce arrived in offensive attacking.
+          </li>
+          <li>
+            <a href="evil_m5project.html">Evil-M5Project</a> – Less features than Bruce, but still a good choice for offensive hacking.
+          </li>
+          <li>
+            <a href="marauder.html">Marauder</a> – Another choice for offensive hacking.
+          </li>
+          <li>
+            <a href="microhydra.html">Microhydra</a> – Proposes a very practical way of switching between micropython applications.
+            You can code and create your own apps using this firmware.
+          </li>
+        </ul>
+        <h2>M5Stick Firmwares</h2>
+        <ul>
+          <li>
+            <a href="bruce.html">Bruce</a> – Currently best firmware for red team operations.
+          </li>
+          <li>
+            <a href="nemo.html">Nemo [ARCHIVED]</a> – Older firmware, used to be the reference before Bruce arrived in offensive attacking.
+          </li>
+          <li>
+            <a href="cathack.html">CatHack</a> – Maintained firmware for red team operations.
+          </li>
+          <li>
+            <a href="marauder.html">Marauder</a> – Another choice for offensive hacking.
+          </li>
+          <li>
+            <a href="evil_m5project.html">Evil-M5Project</a> – Less features than Bruce, but still a good choice for offensive hacking.
+          </li>
+          <li>
+            <a href="microhydra.html">Microhydra</a> – Proposes a very practical way of switching between micropython applications.
+            You can code and create your own apps using this firmware.
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 Cardputer &amp; M5Stick. All rights reserved.</p>
+    </footer>
+  </div>
+</body>
+</html>
